--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-<<<<<<< HEAD
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
@@ -16,11 +15,17 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
+    "dayjs": "^1.11.10",
     "pinia": "^2.0.0",
+    "vee-validate": "^4.12.6",
     "vue": "^3.3.4",
-    "vue-router": "^4.0.0"
+    "vue-router": "^4.0.0",
+    "vuetify": "^3.5.13"
   },
   "devDependencies": {
+    "@mdi/font": "^7.4.47",
     "@rushstack/eslint-patch": "^1.3.3",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/vue": "^8.1.0",
@@ -32,17 +37,8 @@
     "eslint-plugin-vue": "^9.17.0",
     "happy-dom": "^17.6.3",
     "prettier": "^3.0.3",
+    "sass": "^1.72.0",
     "vite": "^6.3.5",
     "vitest": "^3.2.1"
-=======
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "vue": "^3.5.13"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^5.2.3",
-    "vite": "^6.3.5"
->>>>>>> origin/main
   }
 }
