--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.9",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "dayjs": "^1.11.10",
