--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "@rushstack/eslint-patch": "^1.3.3",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/vue": "^8.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-vue": "^5.2.4",
     "@vitest/ui": "^3.2.1",
     "@vue/eslint-config-prettier": "^8.0.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.4.6",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
