--- a/karirin/package.json
+++ b/karirin/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -18,6 +21,7 @@
     "vuetify": "^3.8.7"
   },
   "devDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.9.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "vite": "^6.3.5"
   }
