--- a/karirin/package.json
+++ b/karirin/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "engines": {
-    "node": ">=18.0.0"
+    "node": "18.x"
   },
   "scripts": {
     "dev": "vite",
@@ -23,6 +23,6 @@
   "devDependencies": {
     "@rollup/rollup-linux-x64-gnu": "4.9.0",
     "@vitejs/plugin-vue": "^5.2.3",
-    "vite": "^6.3.5"
+    "vite": "^5.0.12"
   }
 }
