--- a/karirin/package.json
+++ b/karirin/package.json
@@ -1,28 +1,36 @@
 {
   "name": "karirin",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
   "type": "module",
   "engines": {
-    "node": "18.x"
+    "node": ">=16.0.0"
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "run-p type-check \"build-only {@}\" --",
+    "preview": "vite preview",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --noEmit -p tsconfig.json --composite false"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
-    "axios": "^1.9.0",
-    "chart.js": "^4.4.9",
-    "dayjs": "^1.11.13",
-    "vee-validate": "^4.15.0",
-    "vue": "^3.5.13",
-    "vuetify": "^3.8.7"
+    "@supabase/supabase-js": "^2.39.8",
+    "pinia": "^2.1.7",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0",
+    "vuetify": "^3.5.9"
   },
   "devDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "4.9.0",
-    "@vitejs/plugin-vue": "^5.2.3",
-    "vite": "^5.0.12"
+    "@tsconfig/node18": "^18.2.2",
+    "@types/node": "^20.11.28",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/tsconfig": "^0.5.1",
+    "npm-run-all": "^4.1.5",
+    "path": "^0.12.7",
+    "typescript": "~5.4.0",
+    "vite": "^5.1.6",
+    "vite-plugin-vuetify": "^2.0.3",
+    "vue-tsc": "^2.0.6"
   }
 }
