--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "dayjs": "^1.11.10",
     "pinia": "^2.0.0",
     "vee-validate": "^4.12.6",
+    "vite-plugin-vuetify": "^2.1.1",
     "vue": "^3.3.4",
     "vue-router": "^4.0.0",
-    "vuetify": "^3.5.13"
+    "vuetify": "^3.8.8"
   },
   "devDependencies": {
     "@mdi/font": "^7.4.47",
