fix: update build configuration for Netlify deployment

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,7 +6,7 @@
     npm install @rollup/rollup-linux-x64-gnu &&
     npm run build
   """
-  publish = "dist"
+  publish = "karirin/dist"
 
 [build.environment]
   NODE_VERSION = "18"
