--- a/.gitignore
+++ b/.gitignore
@@ -4,48 +4,38 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-<<<<<<< HEAD
+pnpm-debug.log*
+lerna-debug.log*
 dev-debug.log
 
 # Dependency directories
 node_modules/
+dist
+dist-ssr
+*.local
 
 # Environment variables
 .env
 
 # Cursor
 .cursor/
-
-# Editor directories and files
-.idea
-.vscode
-=======
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
+.cursor/mcp.json
+mcp.json
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
 .DS_Store
->>>>>>> origin/main
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-<<<<<<< HEAD
 
 # OS specific
 .DS_Store
 
 # Task files
 tasks.json
-tasks/ 
-=======
->>>>>>> origin/main
+tasks/
